--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,71 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+* {
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+}
+
+#container {
+  width: 100%;
+  height: 100vh;
+  min-height: 100vh;
+  background-color: #f5f5f5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#cardbody {
+  width: 300px;
+  height: 450px;
+  background-color: #fff;
+  border-radius: 20px;
+  align-content: center;
+  padding: 20px;
+  -webkit-box-shadow: 0 10px 6px -6px #777;
+  -moz-box-shadow: 0 100px 6px -6px #777;
+  box-shadow: 0 10px 6px -6px #777;
+}
+
+#cardline {
+  border: 2px solid;
+  border-color: #f5f5f5;
+  border-radius: 8px;
+  width: 100%;
+  height: 100%;
+}
+
+#cardtop {
+  height: 15%;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  padding-left: 10px;
+}
+#cardmiddle {
+  height: 70%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#cardmiddle h1 {
+  font-weight: 900;
+  font-size: 10em;
+}
+
+#cardbottom {
+  height: 15%;
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  padding-left: 10px;
+  transform: rotate(180deg);
+}
+
+.red {
+  color: red;
+}
+
+.black {
+  color: #000;
+}
